tests/neg/erased-type.scala
// scalac: -language:experimental.erasedDefinitions

class Test {
  erased type T // error
}
